--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,10 +20,13 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
     ports:
-      - "3000:3000"
+      - "3000:3000"  # Vite dev server runs on 5173
     volumes:
       - ./frontend:/app
       - /app/node_modules
+    environment:
+      - CHOKIDAR_USEPOLLING=true  # Enables hot reload (especially on Mac/Windows)
+    command: npm run dev -- --host  # Ensures Vite listens on all interfaces
     restart: unless-stopped
     depends_on:
       - backend
